doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-sourcepath
/Users/seankim/Downloads/final-2
-source
1.8
-classpath
/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/seankim/Downloads/final-2
-d
/Users/seankim/Downloads/final-2/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/seankim/Downloads/BlueJ 3.1.6/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
final-2
-windowtitle
final-2
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
/Users/seankim/Downloads/final-2/SquareIcon.java
/Users/seankim/Downloads/final-2/efficientRobot.java
/Users/seankim/Downloads/final-2/IndestructibleRobot.java
/Users/seankim/Downloads/final-2/main.java
/Users/seankim/Downloads/final-2/ScoreBoard.java
/Users/seankim/Downloads/final-2/Timers.java
<---- end of javadoc command ---->
Loading source file /Users/seankim/Downloads/final-2/SquareIcon.java...
Loading source file /Users/seankim/Downloads/final-2/efficientRobot.java...
Loading source file /Users/seankim/Downloads/final-2/IndestructibleRobot.java...
Loading source file /Users/seankim/Downloads/final-2/main.java...
Loading source file /Users/seankim/Downloads/final-2/ScoreBoard.java...
Loading source file /Users/seankim/Downloads/final-2/Timers.java...
Constructing Javadoc information...
/Users/seankim/Downloads/final-2/SquareIcon.java:2: error: package becker.robots does not exist
import becker.robots.*;
^
/Users/seankim/Downloads/final-2/SquareIcon.java:3: error: package becker.robots.icons does not exist
import becker.robots.icons.*;
^
/Users/seankim/Downloads/final-2/SquareIcon.java:6: error: cannot find symbol
public class SquareIcon extends ShapeIcon
                                ^
  symbol: class ShapeIcon
/Users/seankim/Downloads/final-2/efficientRobot.java:2: error: package becker.robots does not exist
import becker.robots.*;
^
/Users/seankim/Downloads/final-2/IndestructibleRobot.java:1: error: package becker.robots does not exist
import becker.robots.*;
^
/Users/seankim/Downloads/final-2/IndestructibleRobot.java:3: error: cannot find symbol
public class IndestructibleRobot extends Robot //superclass is Robot
                                         ^
  symbol: class Robot
/Users/seankim/Downloads/final-2/efficientRobot.java:6: error: cannot find symbol
    public efficientRobot(City c, int s, int a, Direction d, int b)
                          ^
  symbol:   class City
  location: class efficientRobot
/Users/seankim/Downloads/final-2/efficientRobot.java:6: error: cannot find symbol
    public efficientRobot(City c, int s, int a, Direction d, int b)
                                                ^
  symbol:   class Direction
  location: class efficientRobot
/Users/seankim/Downloads/final-2/efficientRobot.java:34: error: cannot find symbol
    public void setDirection(Direction direction)
                             ^
  symbol:   class Direction
  location: class efficientRobot
/Users/seankim/Downloads/final-2/IndestructibleRobot.java:6: error: cannot find symbol
    public IndestructibleRobot(City c, int s, int a, Direction d, int b)
                               ^
  symbol:   class City
  location: class IndestructibleRobot
/Users/seankim/Downloads/final-2/IndestructibleRobot.java:6: error: cannot find symbol
    public IndestructibleRobot(City c, int s, int a, Direction d, int b)
                                                     ^
  symbol:   class Direction
  location: class IndestructibleRobot
/Users/seankim/Downloads/final-2/main.java:4: error: package becker.robots does not exist
import becker.robots.*;
^
/Users/seankim/Downloads/final-2/main.java:5: error: package becker.robots does not exist
import becker.robots.*;
^
/Users/seankim/Downloads/final-2/main.java:6: error: package becker.robots.icons does not exist
import becker.robots.icons.*;
^
Standard Doclet version 1.8.0_66
Building tree for all the packages and classes...
Generating /Users/seankim/Downloads/final-2/doc/efficientRobot.html...
Generating /Users/seankim/Downloads/final-2/doc/IndestructibleRobot.html...
Generating /Users/seankim/Downloads/final-2/doc/main.html...
Generating /Users/seankim/Downloads/final-2/doc/ScoreBoard.html...
Generating /Users/seankim/Downloads/final-2/doc/SquareIcon.html...
Generating /Users/seankim/Downloads/final-2/doc/Timers.html...
Generating /Users/seankim/Downloads/final-2/doc/package-frame.html...
Generating /Users/seankim/Downloads/final-2/doc/package-summary.html...
Generating /Users/seankim/Downloads/final-2/doc/package-tree.html...
Generating /Users/seankim/Downloads/final-2/doc/constant-values.html...
Generating /Users/seankim/Downloads/final-2/doc/serialized-form.html...
Building index for all the packages and classes...
Generating /Users/seankim/Downloads/final-2/doc/overview-tree.html...
Generating /Users/seankim/Downloads/final-2/doc/index-all.html...
Building index for all classes...
Generating /Users/seankim/Downloads/final-2/doc/allclasses-frame.html...
Generating /Users/seankim/Downloads/final-2/doc/allclasses-noframe.html...
Generating /Users/seankim/Downloads/final-2/doc/index.html...
Generating /Users/seankim/Downloads/final-2/doc/help-doc.html...
Generating /Users/seankim/Downloads/final-2/doc/stylesheet.css...
14 warnings
